tests/miniJava/neg/004070_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class false java { }
